--- a/source/scripts/play.html
+++ b/source/scripts/play.html
@@ -154,7 +154,7 @@
 						<span>Moves: <span id="win-moves">0</span> <span id="win-creator-moves" class="text-muted"></span></span><br>
 						<span>Distance: <span id="win-distance">0</span> <span id="win-creator-distance" class="text-muted"></span></span>
 					</div>
-					<div id="ratings" class="modal-footer hidden">
+					<div class="modal-footer feedback hidden">
 						<div style="text-align: center;">
 							<div id="quality" class="btn-group" role="group">
 								<span><button id="quality-0" class="btn btn-default btn-quality" data-toggle="tooltip" title="Terrible">
@@ -193,6 +193,9 @@
 							</div>
 							<br>
 						</div>
+					</div>
+					<div class="modal-footer feedback hidden">
+						<textarea id="feedback" class="form-control" rows="3" placeholder="Leave some feedback (optional)..."></textarea>
 					</div>
 					<div class="modal-footer">
 						<a type="button" class="btn btn-default win-button restart">Replay</a>
@@ -255,8 +258,8 @@
 		}); */
 
 		const colors = ["green", "lime", "yellow", "orange", "red"];
-		let quality = undefined;
-		let difficulty = undefined;
+		let quality = null;
+		let difficulty = null;
 
 		function clear(group) {
 			group.removeClass("btn-green");
@@ -290,11 +293,27 @@
 			showQuality(quality);
 			showDifficulty(difficulty);
 		}
+		function loadFeedback() {
+			quality = retrieve(readJSON(`${__dirname}/../../save-data/feedback/${filename}.json`), "quality");
+			if (quality == undefined) quality = null;
+			difficulty = retrieve(readJSON(`${__dirname}/../../save-data/feedback/${filename}.json`), "difficulty");
+			if (difficulty == undefined) difficulty = null;
+			updateRatings();
+			$("#feedback").val(retrieve(readJSON(`${__dirname}/../../save-data/feedback/${filename}.json`), "feedback"));
+		}
+		function saveFeedback() {
+			write(`${__dirname}/../../save-data/feedback/${filename}.json`,
+				`{\n\t"quality": ${quality},\n\t"difficulty": ${difficulty}` +
+				($("#feedback").val() ? `,\n\t"feedback": ${JSON.stringify($("#feedback").val())}` : "") +
+				`\n}`
+			);
+		}
 		$(".btn-quality").on("mouseenter", function(event) {
 			showQuality(Number(event.currentTarget.id.replace(/\D/g, '')));
 		});
 		$(".btn-quality").on("click", function(event) {
 			quality = Number(event.currentTarget.id.replace(/\D/g, ''));
+			saveFeedback();
 			updateRatings();
 		});
 		$("#quality").on("mouseleave", function() {
@@ -305,14 +324,19 @@
 		});
 		$(".btn-difficulty").on("click", function(event) {
 			difficulty = Number(event.currentTarget.id.replace(/\D/g, ''));
+			saveFeedback();
 			updateRatings();
 		});
 		$("#difficulty").on("mouseleave", function() {
 			showDifficulty(difficulty);
 		});
-		if (retrieve(readJSON(`${__dirname}/../../save-data/preferences/developer.json`), "level-ratings")) {
-			$("#ratings").removeClass("hidden");
+		$("#feedback").on("blur", function() {
+			saveFeedback();
 			updateRatings();
+		});
+		if (retrieve(readJSON(`${__dirname}/../../save-data/preferences/developer.json`), "level-ratings")) {
+			$(".feedback").removeClass("hidden");
+			loadFeedback();
 		}
 
 		init();
