--- a/source/scripts/menu.html
+++ b/source/scripts/menu.html
@@ -79,7 +79,7 @@
 			location = "levelselect.html";
 		});
 		$("#editor").on("click", function() {
-			location = "editor.html?play=0";
+			location = "editor-old.html?play=0";
 		});
 		$("#about").on("click", function() {
 			$("#about-modal").modal();
@@ -89,7 +89,7 @@
 		});
 
 		function editor() { // console use only
-			location = "editor.html?play=0";
+			location = "editor-old.html?play=0";
 		}
 		function testing() { // console use only
 			location = "testing.html";
