--- a/source/scripts/index.html
+++ b/source/scripts/index.html
@@ -7,10 +7,10 @@
 		<link rel="stylesheet" href="css/blockade.css">
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	</head>
-	<body style="font-family: Hasklig; -webkit-user-select: none; cursor: default; opacity: 0.0;">
+	<body style="opacity: 0.0;">
 		<div class="container-fluid drag-bar"></div>
 		<div class="container centered" align="center">
-			<h1 style="font-family: Hasklig; font-size: 80px; margin-top: 0px; margin-bottom: 16px;">「Blockade」</h1>
+			<h1 class="logo">「Blockade」</h1>
 		</div>
 	</body>
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
