--- a/source/scripts/levelselect.html
+++ b/source/scripts/levelselect.html
@@ -7,11 +7,9 @@
 		<link rel="stylesheet" href="css/blockade.css">
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 		<style>
-			td {
-				padding: 5px;
-			}
-			.level-button {
-				padding: 18px 0px;
+			.info-panel {
+				width: 238px;
+				height: 290px;
 			}
 			.panel-heading {
 				padding-left: 0px;
@@ -21,50 +19,63 @@
 				font-family: inherit;
 				font-size: 15px;
 			}
+			.panel-body {
+				padding-top: 8px;
+			}
+			#select {
+				background: none;
+			}
+			td {
+				padding: 5px;
+			}
+			.level-button {
+				width: 65px;
+				padding: 18px 0px;
+			}
+			.action-button {
+				width: 141px;
+			}
 		</style>
 	</head>
-	<body style="font-family: Hasklig; -webkit-user-select: none; cursor: default; padding: 0px; opacity: 0.0;">
+	<body style="opacity: 0.0;">
 		<div class="container-fluid drag-bar"></div>
 		<div class="container centered" align="center" style="width: 800px; padding: 0px;">
 			<div>
-				<a href="#" id="leftArrow" data-id="-1" class="btn btn-info move"><-</a>
-				<a href="#" id="title" class="btn btn-info disabled" style="width: 290px; cursor: default; opacity: 1.0;">Page </a>
-				<a href="#" id="rightArrow" data-id="1" class="btn btn-info move">-></a>
+				<a id="previous" class="btn btn-info"><-</a>
+				<a class="btn btn-info" style="width: 290px; pointer-events: none;">Page <span id="page"></span></a>
+				<a id="next" class="btn btn-info">-></a>
 			</div>
 			<br>
 			<div>
-				<div class="panel panel-primary centered-y" style="position: absolute; left: 8px; width: 238px; height: 290px;">
+				<div class="panel panel-primary info-panel centered-y" style="position: absolute; left: 8px;">
 					<div class="panel-heading">
 						<h3 class="panel-title">
 							<span id="level" class="label label-info" style="position: relative; top: -1px;"></span> <span id="name"></span>
 						</h3>
 					</div>
-					<div class="panel-body" style="padding-top: 8px;">
+					<div class="panel-body">
 						<span id="moves-header" style="float: left;"></span>
-						<span style="float: right;"><span id="player-moves" class="score text-muted"></span> <span id="creator-moves" class="score text-muted"></span></span><br><br>
+						<span style="float: right;"><span id="moves" class="score text-muted"></span> <span id="creator-moves" class="score text-muted"></span></span><br><br>
 						<span id="distance-header" style="float: left;"></span>
-						<span style="float: right;"><span id="player-distance" class="score text-muted"></span> <span id="creator-distance" class="score text-muted"></span></span><br><br>
-						<!--span style="float: middle; font-size: 17px;"><span id="creators-header" class="label label-primary"></span></span><br><br-->
+						<span style="float: right;"><span id="distance" class="score text-muted"></span> <span id="creator-distance" class="score text-muted"></span></span><br><br>
 						<span id="creators-header" class="label label-primary" style="float: middle; font-size: inherit;"></span><br><br>
 						<span id="creator-0" style="float: middle;"></span><br><br>
 						<span id="creator-1" style="float: middle;"></span><br><br>
 						<span id="creator-2" style="float: middle;"></span><br><br>
 					</div>
 				</div>
-				<div class="panel panel-primary centered-y" style="position: absolute; right: 8px; width: 238px; height: 290px;">
+				<div class="panel panel-primary info-panel centered-y" style="position: absolute; right: 8px;">
 					<div class="panel-heading">
 						<h3 class="panel-title">Rankings</h3>
 					</div>
-					<div class="panel-body" style="padding-top: 8px;">
-
-					</div>
+					<div class="panel-body"></div>
 				</div>
-				<table id="table" style="background: none;"></table>
+				<table id="select"></table>
 			</div>
 			<br>
 			<div>
-				<a href="menu.html" class="btn btn-default" style="width: 141px;">Back</a>
-				<a href="#" class="btn btn-info disabled" id="play-button" style="width: 141px;" data-id="">Play</a>
+				<a id="exit" class="btn btn-default action-button">Back</a>
+				<a id="play" class="btn btn-info action-button">Play</a>
 			</div>
 		</div>
 	</body>
@@ -79,75 +90,51 @@
 
 		$(".btn").attr("draggable", "false");
 		$(".btn").on("mouseup mouseleave", function() {$(this).blur();});
-		$("#table").on("mouseup mouseleave", ".level-button", function() {$(this).blur();});
-
-		/*let levels = {};
-		const names = readJSON(`${__dirname}/../levels.json`);
-		names.forEach(function(name, number) {
-			data = readJSON(`${__dirname}/../levels/${name}.json`);
-			if (data !== undefined) {
-				var color = retrieve(data, "info.icon-color");
-				color = ["default", "primary", "success", "info", "warning", "danger"].includes(color) ? color : "primary";
-				levels[number] = {color: color};
-			}
-		});*/
+		$("#select").on("mouseup mouseleave", ".level-button", function() {$(this).blur();});
 
 		const size = [4, 4];
-		//const pages = Math.min(Math.ceil(Math.max.apply(null, Object.keys(levels).map(function(levelNum) {return Number(levelNum);}).concat([0])) / (size[0] * size[1])), 4096);
 
 		let level = location.search.includes("=") ? Number(location.search.split("&")[0].split("=")[1]) : undefined;
-		let page = level == undefined ? 0 : Math.floor(level / (size[0] * size[1]));
+		let page = level == undefined || isNaN(level) ? 0 : Math.floor(level / (size[0] * size[1]));
 
-		function init() {
-			// $(".btn").attr("draggable", "false");
-			update();
-			showInfo();
-		}
 		function update() {
-			$("#table").empty();
-			$("#table").data("id", page);
-			$("#title").html(`Page ${page}`);
+			$("#select").empty();
+			$("#page").html(page);
 			const names = readJSON(`${__dirname}/../levels.json`);
-			const pages = Math.min(Math.floor(
-				Math.max.apply(null,
-					names.map(function(name, index) {return readJSON(`${__dirname}/../levels/${name}.json`) != undefined ? index : 0;}).concat([0])
-				) / (size[0] * size[1])
-			) + 1, 4096);
-			if (page + $("#leftArrow").data("id") < 0) $("#leftArrow").addClass("disabled");
-			else $("#leftArrow").removeClass("disabled");
-			if (page + $("#rightArrow").data("id") >= pages) $("#rightArrow").addClass("disabled");
-			else $("#rightArrow").removeClass("disabled");
+			const maximum = Math.min(Math.floor(Math.max.apply(null,
+				names.map(function(name, index) {return readJSON(`${__dirname}/../levels/${name}.json`) != undefined ? index : 0;}).concat([0])
+			) / (size[0] * size[1])), 4095);
+			if (page <= 0) $("#previous").addClass("disabled");
+			else $("#previous").removeClass("disabled");
+			if (page >= maximum) $("#next").addClass("disabled");
+			else $("#next").removeClass("disabled");
 			for (let y = 0; y < size[1]; y++) {
-				$("#table").append(`<tr id="row-${y + 1}"></tr>`);
+				$("#select").append(`<tr id="row-${y}"></tr>`);
 				for (let x = 0; x < size[0]; x++) {
 					let level = size[0] * size[1] * page + size[0] * y + x;
-					//let exists = level in levels;
-					//let color = exists ? levels[level].color : "default";
 					let data = names[level] == undefined ? undefined : readJSON(`${__dirname}/../levels/${names[level]}.json`);
 					let exists = data != undefined;
 					let color = exists ? retrieve(data, "info.icon-color") : "default";
 					color = ["default", "primary", "success", "info", "warning", "danger"].includes(color) ? color : "primary";
-					$("#row-" + (y + 1)).append(`<td class="row-${y + 1} col-${x + 1}"></td>`);
-					$(`.row-${y + 1}.col-${x + 1}`).append(`<a id="${level}" class="btn btn-${color} btn-lg btn-block level-button ${exists ? "" : "disabled"}" style="width: 65px;">${level}</a>`);
+					$(`#row-${y}`).append(`<td class="row-${y} col-${x}"></td>`);
+					$(`.row-${y}.col-${x}`).append(`<a id="${level}" class="btn btn-${color} btn-lg btn-block level-button ${exists ? "" : "disabled"}">${level}</a>`);
 				}
 			}
 			$(".level-button").attr("draggable", "false");
 			highlight();
 		}
 		function highlight() {
-			$('.level-button').removeClass("active");
-			if (level !== undefined) $(`.level-button#${level}`).addClass("active");
-			if (/*level in levels*/ readJSON(`${__dirname}/../levels.json`)[level] != undefined) $("#play-button").removeClass("disabled").data("id", level);
-			else $("#play-button").addClass("disabled").data("id", 0);
+			$(".level-button").removeClass("active");
+			if (!$(`.level-button#${level}`).hasClass("disabled")) $(`.level-button#${level}`).addClass("active");
 		}
 		function showInfo() {
-			if (level !== undefined) {
-				const name = readJSON(`${__dirname}/../levels.json`)[level];
-				const data = readJSON(`${__dirname}/../levels/${name}.json`);
-				const progress = readJSON(`${__dirname}/../../save-data/progress/${name}.json`);
+			if (readJSON(`${__dirname}/../levels.json`)[level] != undefined) {
+				const filename = readJSON(`${__dirname}/../levels.json`)[level];
+				const data = readJSON(`${__dirname}/../levels/${filename}.json`);
+				const progress = readJSON(`${__dirname}/../../save-data/progress/${filename}.json`);
 				$("#level").html(level);
-				const cap = 21 - Math.floor(String(level).length * 2/3)
-				if (typeof retrieve(data, "info.name") === "string") $("#name").html(data.info.name.length > cap ? data.info.name.slice(0, cap - 3) + "..." : data.info.name);
+				const cap = 21 - Math.floor(String(level).length * 2 / 3);
+				if (typeof retrieve(data, "info.name") == "string") $("#name").html(data.info.name.length > cap ? data.info.name.slice(0, cap - 3) + "..." : data.info.name);
 				else $("#name").html("Level");
 				$("#moves-header").html("Moves:");
 				$("#distance-header").html("Distance:");
@@ -155,59 +142,61 @@
 				$(".score").addClass("text-muted");
 				let creatorMoves = retrieve(data, "info.creator-score.moves");
 				let creatorDistance = retrieve(data, "info.creator-score.distance");
-				if (retrieve(progress, "moves") != undefined) {
-					$("#player-moves").html(progress.moves);
-					$("#player-moves").removeClass("text-muted");
+				if (typeof retrieve(progress, "moves") == "number") {
+					$("#moves").html(progress.moves);
+					$("#moves").removeClass("text-muted");
 					if (progress.moves <= creatorMoves) {
-						$("#player-moves, #creator-moves").addClass(progress.moves == creatorMoves ? "text-success" : "text-warning");
+						$("#moves, #creator-moves").addClass(progress.moves == creatorMoves ? "text-success" : "text-warning");
 					}
-				} else $("#player-moves").html("?");
-				if (retrieve(progress, "distance") != undefined) {
-					$("#player-distance").html(progress.distance);
-					$("#player-distance").removeClass("text-muted");
+				} else $("#moves").html("?");
+				if (typeof retrieve(progress, "distance") == "number") {
+					$("#distance").html(progress.distance);
+					$("#distance").removeClass("text-muted");
 					if (progress.distance <= creatorDistance) {
-						$("#player-distance, #creator-distance").addClass(progress.distance == creatorDistance ? "text-success" : "text-warning");
+						$("#distance, #creator-distance").addClass(progress.distance == creatorDistance ? "text-success" : "text-warning");
 					}
-				} else $("#player-distance").html("?");
-				// $("#player-moves, #player-distance").html("?");
-				if (retrieve(data, "info.creators") !== undefined && data.info.creators.length) $("#creators-header").html("Creators");
+				} else $("#distance").html("?");
+				if (retrieve(data, "info.creators") != undefined && data.info.creators.length) $("#creators-header").html("Creators");
 				else $("#creators-header").html("");
 				for (let i = 0; i < 3; i++) {
-					if (retrieve(data, "info.creators") !== undefined && typeof data.info.creators[i] === "string") {
+					if (retrieve(data, "info.creators") != undefined && typeof data.info.creators[i] == "string") {
 						$(`#creator-${i}`).html(data.info.creators[i].length > 22 ? data.info.creators[i].slice(0, 19) + "..." : data.info.creators[i]);
 					} else $(`#creator-${i}`).html("");
 				}
-				if (retrieve(data, "info.creator-score.moves") !== undefined) $("#creator-moves").html("/ " + data.info["creator-score"].moves);
+				if (retrieve(data, "info.creator-score.moves") != undefined) $("#creator-moves").html("/ " + data.info["creator-score"].moves);
 				else $("#creator-moves").html("");
-				if (retrieve(data, "info.creator-score.distance") !== undefined) $("#creator-distance").html("/ " + data.info["creator-score"].distance);
+				if (retrieve(data, "info.creator-score.distance") != undefined) $("#creator-distance").html("/ " + data.info["creator-score"].distance);
 				else $("#creator-distance").html("");
+				$("#play").removeClass("disabled");
 			} else {
-				$("#level, #moves-header, #player-moves, #creator-moves, #distance-header, #player-distance, #creator-distance, #creators-header, #creator-0, #creator-1, #creator-2").html("");
+				$("#level, #moves-header, #moves, #creator-moves, #distance-header, #distance, #creator-distance, #creators-header, #creator-0, #creator-1, #creator-2").html("");
 				$("#name").html("Level");
+				$("#play").addClass("disabled");
 			}
 		}
-		$(".move").on("click", function() {
-			if (!$(this).hasClass("disabled")) {
-				page += $(this).data("id");
-			}
-			update();
-		});
-		$("#table").on("click", ".level-button", function() {
+		$("#select").on("click", ".level-button", function() {
 			if (level != $(this).attr("id")) {
 				level = Number($(this).attr("id"));
-			} else {
-				if (!$("#play-button").hasClass("disabled")) {
-					location = `play.html?level=${$("#play-button").data("id")}&custom=0`
-				}
-			}
-			highlight();
-			showInfo();
+				highlight();
+				showInfo();
+			} else $("#play").trigger("click");
 		});
-		$("#play-button").on("click", function() {
-			if (!$(this).hasClass("disabled")) {
-				location = `play.html?level=${$(this).data("id")}&custom=0`
-			}
+		$("#previous").on("click", function() {
+			page--;
+			update();
 		});
-		init();
+		$("#next").on("click", function() {
+			page++;
+			update();
+		});
+		$("#exit").on("click", function() {
+			location = "menu.html";
+		});
+		$("#play").on("click", function() {
+			location = `play.html?level=${level}`;
+		});
+
+		update();
+		showInfo();
 	</script>
 </html>
