--- a/source/scripts/menu.html
+++ b/source/scripts/menu.html
@@ -15,10 +15,10 @@
 			}
 		</style>
 	</head>
-	<body style="font-family: Hasklig; -webkit-user-select: none; cursor: default; opacity: 0.0;">
+	<body style="opacity: 0.0;">
 		<div class="container-fluid drag-bar"></div>
 		<div class="container centered" align="center">
-			<h1 style="font-family: Hasklig; font-size: 80px; margin-top: 0px; margin-bottom: 0px;">「Blockade」</h1><br><br>
+			<h1 class="logo">「Blockade」</h1><br>
 			<div style="width: 300px; margin-bottom: 12px;">
 				<a id="play" class="btn btn-default btn-lg btn-block">Play</a><br>
 				<a id="editor" class="btn btn-default btn-lg btn-block disabled active">Editor</a><br>
@@ -26,7 +26,7 @@
 				<a id="quit" class="btn btn-default btn-lg btn-block">Quit</a>
 			</div>
 		</div>
-		<!--span class="label label-default" style="position: absolute; left: 6px; bottom: 6px;"><span style="font-family: Verdana">©</span> Cooper Anderson 2016</span-->
+		<!--span class="label label-default" style="position: absolute; left: 6px; bottom: 6px;"><span style="font-family: Verdana">©</span> Blockade Team 2017</span-->
 		<span id="version" class="label" style="position: absolute; right: 6px; bottom: 6px;"></span>
 		<div id="about-modal" class="modal fade" role="dialog">
 			<div class="modal-dialog">
