--- a/source/scripts/editor-old.html
+++ b/source/scripts/editor-old.html
@@ -54,10 +54,10 @@
 			<div class="container-fluid" style="padding-right: 0px;">
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li><a href="#" class="modal-button" data-toggle="modal" data-target="#openModal" id="openButton">Open</a></li>
-						<li><a href="#" class="modal-button" data-toggle="modal" data-target="#saveModal">Save</a></li>
-						<li><a href="#" id="play">Play</a></li>
-						<li><a href="#" class="modal-button" data-toggle="modal" data-target="#helpModal">Help</a></li>
+						<li><a class="modal-button" data-toggle="modal" data-target="#openModal" id="openButton">Open</a></li>
+						<li><a class="modal-button" data-toggle="modal" data-target="#saveModal">Save</a></li>
+						<li><a id="play">Play</a></li>
+						<li><a class="modal-button" data-toggle="modal" data-target="#helpModal">Help</a></li>
 						<li><a href="menu.html">Exit</a></li>
 						<li><a id="arrow" style="padding-right: 0px;">»</a></li>
 					</ul>
@@ -73,10 +73,10 @@
 			<div class="container-fluid">
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
 					<ul class="nav navbar-nav" id="selectors">
-						<li style="margin: 3px;"><a href="#" class="btn btn-primary select select-blank selected" data-id="blank" style="padding: 1px;"><div class="fake-tile" style="background-color: #222222"></div></a></li>
-						<li style="margin: 3px;"><a href="#" class="btn btn-primary select select-tile" data-id="tile" style="padding: 1px;"><div class="fake-tile"></div></a></li>
-						<li style="margin: 3px;"><button href="#" class="btn btn-primary select select-block" data-id="block" style="padding: 1px;"><a class="btn btn-info disabled block"></a></button></li>
-						<li style="margin: 3px;"><button href="#" class="btn btn-primary select select-plate" data-id="plate" style="padding: 1px;"><a href="#" class="btn btn-warning disabled plate"></a></button></li>
+						<li style="margin: 3px;"><a class="btn btn-primary select select-blank selected" data-id="blank" style="padding: 1px;"><div class="fake-tile" style="background-color: #222222"></div></a></li>
+						<li style="margin: 3px;"><a class="btn btn-primary select select-tile" data-id="tile" style="padding: 1px;"><div class="fake-tile"></div></a></li>
+						<li style="margin: 3px;"><button class="btn btn-primary select select-block" data-id="block" style="padding: 1px;"><a class="btn btn-info disabled block"></a></button></li>
+						<li style="margin: 3px;"><button class="btn btn-primary select select-plate" data-id="plate" style="padding: 1px;"><a class="btn btn-warning disabled plate"></a></button></li>
 					</ul>
 					<a class="btn btn-warning" id="selector" style="position: absolute; width: 60px; height: 4px; left: 30px; bottom: 2px;"></a>
 				</div>
