--- a/source/scripts/testing.html
+++ b/source/scripts/testing.html
@@ -97,7 +97,7 @@
 	</body>
 	<link rel="stylesheet" href="css/bootstrap.css" title="dark">
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-	<script src="js/blockade.js"></script>
+	<script src="js/testing.js"></script>
 	<script>
 		init();
 		$("#menu").css({left: `${54 - $("#menu").width()}px`});
