--- a/source/scripts/about-text.html
+++ b/source/scripts/about-text.html
@@ -1,4 +1,4 @@
-<p>Blockade is a minimal grid-based puzzle game that is inspired by the ice puzzles in The Legend of Zelda: Twilight Princess.</p>
+<p>Blockade is a minimal but challenging puzzle game, inspired by the ice puzzles in The Legend of Zelda: Twilight Princess.</p>
 <p>Programming:</p>
 <ul>
 	<li>Cooper Anderson</li>
