--- a/source/scripts/editor-old.html
+++ b/source/scripts/editor-old.html
@@ -141,5 +141,5 @@
 		$(".btn").on("mouseup mouseleave", function() {$(this).blur();});
 	</script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script src="js/editor1.js"></script>
+	<script src="js/editor-old.js"></script>
 </html>
