--- a/source/scripts/play.html
+++ b/source/scripts/play.html
@@ -83,7 +83,7 @@
 	</head>
 	<body style="opacity: 0.0;">
 		<div class="container-fluid drag-bar" style="position: absolute;"></div>
-		<div id="game">
+		<div id="game" class="container centered" align="center">
 			<div id="tiles"></div>
 			<div id="plates"></div>
 			<div id="blocks"></div>
